--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <table>
   <tr>
-    <th> username</th>
+    <th>Username</th>
     <th>Type</th>
     <th>Password</th>
     <th></th>
@@ -12,7 +12,7 @@
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user. username %></td>
+    <td><%= user.username %></td>
     <td><%= user.type %></td>
     <td><%= user.password %></td>
     <td><%= link_to 'Show', user %></td>
