Changed user table
changed type col to usertype and added an admin user

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :username %>
   </div>
   <div class="field">
-    <%= f.label :type %><br />
-    <%= f.text_field :type %>
+    <%= f.label :usertype %><br />
+    <%= f.text_field :usertype %>
   </div>
   <div class="field">
     <%= f.label :password %><br />
