--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <th>Username</th>
-    <th>Type</th>
+    <th>Usertype</th>
     <th>Password</th>
     <th></th>
     <th></th>
@@ -13,7 +13,7 @@
 <% @users.each do |user| %>
   <tr>
     <td><%= user.username %></td>
-    <td><%= user.type %></td>
+    <td><%= user.usertype %></td>
     <td><%= user.password %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
