--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Listing users</h1>
-
+<% if notice %>
+    <p id="notice"><%= notice %></p> <% end %>
 <table>
   <tr>
     <th>Username</th>
-    <th>Usertype</th>
+    <th>Type</th>
     <th>Password</th>
     <th></th>
     <th></th>
