--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
     <th>Content</th>
     <th>Category</th>
     <th>Votes</th>
-    <th></th>
+    <th>Last Modified</th>
     <th></th>
     <th></th>
   </tr>
@@ -17,6 +17,8 @@
     <td><%= post.content %></td>
     <td><%= post.category %></td>
     <td><%= post.votes %></td>
+    <td><%= post.updated_at %></td>
+
     <td><%= link_to 'Show', post %></td>
     <td><%= link_to 'Edit', edit_post_path(post) %></td>
     <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
