changed user type to admin boolean

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
+    <%= f.label :UserName %><br />
+    <%= f.text_field :UserName %>
   </div>
   <div class="field">
-    <%= f.label :usertype %><br />
-    <%= f.text_field :usertype %>
+    <%= f.label :admin %><br />
+    <%= f.check_box :admin %>
   </div>
   <div class="field">
     <%= f.label :password %><br />
