--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <th>Username</th>
-    <th>Usertype</th>
+    <th>Admin</th>
     <th>Password</th>
     <th></th>
     <th></th>
@@ -12,8 +12,8 @@
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.username %></td>
-    <td><%= user.usertype %></td>
+    <td><%= user.UserName %></td>
+    <td><%= user.admin %></td>
     <td><%= user.password %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
