Revert "changed user type to admin boolean"
This reverts commit 06bdd1027bd09998025d17bcd1dd6ab20328b021.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Username:</b>
-  <%= @user.UserName %>
+  <%= @user.username %>
 </p>
 
 <p>
-  <b>Admin:</b>
-  <%= @user.admin %>
+  <b>Usertype:</b>
+  <%= @user.usertype %>
 </p>
 
 <p>
