--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,12 +14,12 @@
     <fieldset>
       <legend>Enter User Details</legend>
       <div class="field">
-        <%= f.label :username %><br />
-        <%= f.text_field :username, :size=>40 %>
+        <%= f.label :name %><br />
+        <%= f.text_field :name, :size=>40 %>
       </div>
       <div class="field">
-        <%= f.label :usertype %><br />
-        <%= f.text_field :usertype, :size=>40 %>
+        <%= f.label :admin %><br />
+        <%= f.text_field :admin, :size=>40 %>
       </div>
       <div class="field">
         <%= f.label :password %><br />
