--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Username:</b>
-  <%= @user.username %>
+  <%= @user.name %>
 </p>
 
 <p>
-  <b>Usertype:</b>
-  <%= @user.usertype %>
+  <b>Type:</b>
+  <%= @user.admin %>
 </p>
 
 <p>
