--- a/app/views/users/_signup.html.erb
+++ b/app/views/users/_signup.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
   </div>
     <!--
   <div class="field">
-    <%= f.label :usertype %><br />
-    <%= f.text_field :usertype %>
+    <%= f.label :admin %><br />
+    <%= f.text_field :admin %>
   </div>
   -->
   <div class="field">
