--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CSC 517 Program 1 - Backchannel App</title>
+  <title>CSC 517 Program 1 - Back Channel App</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div id="columns">
-  <div id="navigation">
-    <a href="/">Home</a><br />
-    <a href="posts/">Posts</a><br />
+    <div id="navcontainer">
+      <ul id="navlist">
+        <li><%= link_to 'Home', home_url %></li>
+        <% if !session[:user_id] %>
+            <li><%= link_to 'Log In', login_url %></li>
+            <li><%= link_to 'Sign Up', users_path %></li>
+      <% end %>
+        <li><%= link_to 'Posts', posts_url %></li>
+        <% if session[:user_id] %>
+            <li><%= link_to 'Log Out', logout_path, :method => :delete %></li>
+        <% end %>
+      </ul>
+    </div>
 
-    <% if !session[:user_id] %>
-        <a href="/login">Login</a><br />
-        <a href="users/new/">Sign-Up</a><br />
-    <% end %>
-  </div>
   <div id="main">
     <%= yield %>
   </div>
-  <% if session[:user_id] %>
-      <%= button_to 'Logout', logout_path, :method => :delete %>
-  <% end %>
-</div>
+
 
 </body>
 </html>
