--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,11 @@
         <li><%= link_to 'Home', home_url %></li>
         <% if !session[:user_id] %>
             <li><%= link_to 'Log In', login_url %></li>
-            <li><%= link_to 'Sign Up', users_path %></li>
+            <li><%= link_to 'Sign Up', :controller => "users", :action => "new" %></li>
       <% end %>
         <li><%= link_to 'Posts', posts_url %></li>
         <% if session[:user_id] %>
+            <li><%= link_to 'Users', users_url %></li>
             <li><%= link_to 'Log Out', logout_path, :method => :delete %></li>
         <% end %>
       </ul>
