--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
+    <%= f.label :username %>:
+    <%= User.find(session[:user_id]).name  %>
   </div>
   <div class="field">
     <%= f.label :content %><br />
