modified search [users only]

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
       </ul>
     </div>
 
+    <div id="search">
+      <%= render :partial => 'users/search' %>
+    </div>
+
   <div id="main">
     <%= yield %>
   </div>
