--- a/app/views/users/_search.html.erb
+++ b/app/views/users/_search.html.erb
@@ -1,5 +1,7 @@
-<%= form_tag user_path :method => 'get' do %>
+
+
+<%= form_tag('users/search', :method => 'get') do %>
     <%= label_tag(:search, "Search for:") %>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Find it!", :name => nil %>
+    <%= text_field_tag(:search,  params[:search]) %>
+    <%= submit_tag("Find it!") %>
 <% end %>
