--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,10 +16,11 @@
   <tr>
     <td><%= user.name %></td>
     <td><%= user.password %></td>
-    <td><%= user.admin %></td>
-    <td><%= link_to 'Show', user %></td>
+    <td><%= link_to user.admin %></td>
+    <td><%= link_to 'Show', user%></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
   </tr>
 <% end %>
 </table>
