--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,8 @@
   <b>Votes:</b>
   <%= @post.votes %>
 </p>
-
-
+          <!-- TODO PASS post id -->
+<%= link_to 'New Comment', new_comment_path, :pid => @post.id %> |
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
