--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,7 +18,12 @@
         <%= f.label :name %>:
         <%= f.text_field :name, :size => 40 %>
       </div>
-
+      <% if(User.find(session[:user_id]).admin) %>
+          <div>
+            <%= f.label :admin, 'Admin Privileges' %>:
+            <%= f.check_box :admin %>
+          </div>
+      <% end %>
       <div>
         <%= f.label :password, 'Password' %>:
         <%= f.password_field :password, :size => 40 %>
