Commenting edits, postid still not passing properly :<

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-      Commenting on post <%= @comment.postid %><br/>
+      Commenting on post <%= params[:pid] %><br/>
       Author: <%= @comment.username %><br/>
   </div>
 
