--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <th>Username</th>
-    <th>Postid</th>
+    <th>Post ID</th>
     <th>Body</th>
     <th>Votes</th>
     <th></th>
