--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
       <% end %>
         <li><%= link_to 'Posts', posts_path %></li>
         <% if session[:user_id] %>
+            <% if User.find((session[:user_id])).admin %>
             <li><%= link_to 'Users', users_url %></li>
+            <% end %>
             <li><%= link_to 'Log Out', logout_path, :method => :delete %></li>
         <% end %>
       </ul>
