--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>ID:</b>
+  <%= @post.id %>
+</p>
+
+<p>
   <b>Username:</b>
   <%= @post.username %>
 </p>
