--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', {:controller => "posts", :action => "show", :id => @comment.postid} %>
+<%= link_to 'Back', {:controller => "posts", :id => @comment.postid} %>
