more search modifications

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     </div>
 
     <div id="search">
-      <%= render :partial => 'users/search' %>
+      <%= render :partial => '/users/search' %>
     </div>
 
   <div id="main">
