--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,6 +26,7 @@
 </p>
           <!-- TODO PASS post id -->
 <%# link_to 'New Comment', new_comment_path, :post => @post.id %>
+<%= link_to "New comment", new_comment_path, :post_id => @post.id %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
 
