--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
   <div class="field">
     <%= f.label :category %><br />
-    <%= f.text_field :category %>
-  </div>
+    <%= select("post", "category", Category.find(:all).collect{ |c| [ c.name, c.id] }) %>
+    </div>
   <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content %>
