--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <tr>
     <th>Name</th>
-    <th>Password</th>
-    <th>Admin</th>
+    <!--th>Password</th>
+    <th>Admin</th-->
     <th></th>
     <th></th>
     <th></th>
@@ -15,12 +15,11 @@
 <% @users.each do |user| %>
   <tr>
     <td><%= user.name %></td>
-    <td><%= user.password %></td>
-    <td><%= link_to user.admin %></td>
+    <td><%#= user.password %></td>
+    <td><%#= link_to user.admin %></td>
     <td><%= link_to 'Show', user%></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-
   </tr>
 <% end %>
 </table>
