--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <% if session[:user_id] %>
             <% if User.find((session[:user_id])).admin %>
             <li><%= link_to 'Users', users_url %></li>
+            <li><%= link_to 'Categories', categories_url %></li>
             <% end %>
             <li><%= link_to 'Log Out', logout_path, :method => :delete %></li>
         <% end %>
