--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag('/searches/form', :method => 'get') do %>
+<%= form_tag('/searches/1', :method => 'get') do %>
     <%= label_tag(:search_item, "Search for:") %>
     <%= text_field_tag(:search_item,  params[:search_item]) %>
     <%= submit_tag("Find it!") %>
