--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
         <li><%= link_to 'Home', home_url %></li>
         <% if !session[:user_id] %>
             <li><%= link_to 'Log In', login_url %></li>
-            <li><%= link_to 'Sign Up', :controller => "users", :action => "new" %></li>
+            <li><%= link_to 'Sign Up', new_user_url %></li>
       <% end %>
         <li><%= link_to 'Posts', posts_path %></li>
         <% if session[:user_id] %>
