--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -9,12 +9,17 @@
     <th>Users</th>
   </tr>
   <ul>
-    <% @users.each do |user| %>
-        <tr>
-          <td><%= link_to user.name, :controller=>"user", :action=>"show", :id=>user %></td>
-        </tr>
-        </ul>
-    <% end %>
+    <% if @found_users %>
+        <% @found_users.each do |user| %>
+            <li>
+              <%= link_to user.name, :action=>"show" , :id=>user.id %>
+            </li>
+
+        <% end %>
+   </ul>
+    <% else %>
+        <h2>No results found.</h2>
+  <% end %>
     </table>
 </p>
 
