--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -43,7 +43,7 @@
   <%= @comments.each do |comment| %>
       <tr>
         <td><%= comment.username %></td>
-        <td><%= comment.postid %></td>
+        <td><%= comment.post_id %></td>
         <td><%= comment.body %></td>
         <td><%= comment.votes %></td>
        </tr>
