--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,16 +17,12 @@
   </div>
   <div class="field">
     <%= f.label :category %><br />
-    <%= select("post", "category_id", Category.find(:all).collect{ |c| [ c.name, c.id] }) %>
+    <%= collection_select(:post, :category_id, Category.all, :id, :name, :prompt => true) %>
     </div>
   <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content %>
   </div>
-  <!--div class="field">
-    <%#= f.label :votes %>
-    <%#= f.number_field :votes %>
-  </div-->
   <div class="actions">
     <%= f.submit %>
   </div>
