--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
   <tr>
     <td><%= post.username %></td>
     <td><%= post.content %></td>
-    <td><%= post.category %></td>
+    <td><%= post.category.name %></td>
     <td><%= post.votes %></td>
     <td><%= post.updated_at %></td>
 
