--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,7 +25,7 @@
   <%= @post.votes %>
 </p>
 
-<%#= link_to "New comment", new_comment_path, :post_id => @post.id %>
+<%= link_to "New comment", new_comment_path(:post_id => @post.id) %> |
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
 
