--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <tr>
     <th>Username</th>
+    <th>Content</th>
     <th>Category</th>
     <th>Votes</th>
     <th>Last Modified</th>
@@ -13,6 +14,7 @@
 <% @posts.each do |post| %>
   <tr>
     <td><%= post.username %></td>
+    <td><%= post.content %></td>
     <td><%= post.category.name %></td>
     <td><%= post.votes %></td>
     <td><%= post.updated_at %></td>
