--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New comment</h1>
+<h1>New comment for Post <%= @comment.post_id %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', posts_path, :value => @comment.postid %>
+<%= link_to 'Back', post_path(@comment.post_id) %>
