Fixed issue with post id and username in comment

--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -2,7 +2,7 @@
 <div class="comment">
   <i><%=h comment.username %> says:</i>
   <%= simple_format h(comment.body) %>
-  with votes: <%= comment.votes %>
+  with <%= comment.votes %> votes
   <%#= link_to 'Destroy Comment', comment,
               :confirm => 'Are you sure?',
               :method => :delete %>
