--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,7 +32,8 @@
 <hr>
 <b>Post a Comment</b>
 <%= form_for(@comment) do |f| %>
-    <%= f.hidden_field :username %><br/>
+    <%= f.hidden_field :username, :value => User.find(session[:user_id]).name %>
+    <%= f.hidden_field :post_id, :value => @post.id %>
     <% if @comment.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
