--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,8 +1,5 @@
-<h3>Comments</h3>
 <div class="comment">
-  <i><%=h comment.username %> says:</i>
-  <%= simple_format h(comment.body) %>
-  with <%= comment.votes %> votes
+  <i><%=h comment.username %> says:</i> <%= simple_format h(comment.body) %> with <%= comment.votes %> votes
   <%#= link_to 'Destroy Comment', comment,
               :confirm => 'Are you sure?',
               :method => :delete %>
