--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,15 +24,16 @@
   <b>Votes:</b>
   <%= @post.votes %>
 </p>
-
-<%#= link_to "New comment", new_comment_path(:post_id => @post.id) %>
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<% if(current_user == @post.username) %>
+    <%= link_to 'Edit', edit_post_path(@post) %> |
+    <%= link_to 'Back', posts_path %>
+<% end %>
+<h3>Comments</h3>
 <%= render :partial => 'comment', :collection => @post.comments %>
 <hr>
 <b>Post a Comment</b>
 <%= form_for(@comment) do |f| %>
-    <%= f.hidden_field :username, :value => User.find(session[:user_id]).name %>
+    <%= f.hidden_field :username, :value => current_user.name %>
     <%= f.hidden_field :post_id, :value => @post.id %>
     <% if @comment.errors.any? %>
         <div id="error_explanation">
