--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -5,15 +5,14 @@
 <p>
   <b>Results:</b>
 <table>
-  <tr>
-    <th>Users</th>
-  </tr>
   <% if @found_users.empty? %>
       <span>There were no results for your query</span><br/><br/>
   <% else %>
+        <b>Users</b>
       <ul>
-        <% for user in @found_users %>
-            <li><% user.name %></li>
+        <% @found_users.each do |user| %>
+            <li><%= link_to user.name,
+                            :action => 'show', :id=>user.id %></li>
         <% end %>
       </ul>
 
