--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,13 @@
     <div id="navcontainer">
       <ul id="navlist">
         <li><%= link_to 'Home', home_url %></li>
-        <% if !logged_in? %>
+        <% if !session[:user_id] %>
             <li><%= link_to 'Log In', login_url %></li>
             <li><%= link_to 'Sign Up', new_user_url %></li>
       <% end %>
         <li><%= link_to 'Posts', posts_path %></li>
         <% if session[:user_id] %>
-            <% if logged_in? && User.find((session[:user_id])).admin %>
+            <% if User.find((session[:user_id])).admin %>
             <li><%= link_to 'Users', users_url %></li>
             <li><%= link_to 'Categories', categories_url %></li>
             <% end %>
