--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,10 @@
  *= require_self
  *= require_tree .
  */
+div
+{
+    padding: 5px;
+}
 ul#navlist
 {
     margin-left: 0;
@@ -38,4 +42,34 @@ ul#navlist
     color: #fff;
     background-color: #369;
     text-decoration: none;
+}
+
+table {
+    font-family: verdana,arial,sans-serif;
+    font-size:11px;
+    color:#333333;
+    border-width: 1px;
+    border-color: #666666;
+    border-collapse: collapse;
+}
+
+table th {
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #666666;
+    background-color: #dedede;
+}
+
+table td {
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #666666;
+    background-color: #ffffff;
+}
+
+.no_border
+{
+    border: 0;
 }
