--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,12 @@
-<h1>Listing users</h1>
+<h1>Listing users [<%= link_to 'New', new_user_path %>]</h1>
 <% if notice %>
     <p id="notice"><%= notice %></p>
 <% end %>
 <table>
   <tr>
     <th>Name</th>
-    <!--th>Password</th>
-    <th>Admin</th-->
+    <th>Password</th>
+    <th>Admin</th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,8 +15,8 @@
 <% @users.each do |user| %>
   <tr>
     <td><%= user.name %></td>
-    <td><%#= user.password %></td>
-    <td><%#= link_to user.admin %></td>
+    <td><%= user.password %></td>
+    <td><%= user.admin %></td>
     <td><%= link_to 'Show', user%></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,4 +26,3 @@
 
 <br />
 
-<%= link_to 'New User', new_user_path %>
