--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing categories</h1>
+<h1>Listing categories [<%= link_to 'New', new_category_path %>]</h1>
 
 <table>
   <tr>
@@ -18,4 +18,4 @@
 
 <br />
 
-<%= link_to 'New Category', new_category_path %>
+
