--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing posts</h1>
+<h1>Listing posts [<%= link_to 'New', new_post_path, :id => current_user %>]</h1>
 
 <table>
   <tr>
@@ -6,8 +6,6 @@
     <th>Category</th>
     <th>Votes</th>
     <th>Last Modified</th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @posts.each do |post| %>
@@ -17,13 +15,11 @@
     <td><%= post.votes %></td>
     <td><%= post.updated_at %></td>
 
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td class="no_border"><%= link_to 'Show', post %></td>
+    <% if logged_in? && post.username == current_user.name %>
+    <td class="no_border"><%= link_to 'Edit', edit_post_path(post) %></td>
+    <td class="no_border"><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New Post', new_post_path, :id => session[:user_id] %>
