--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,6 +30,7 @@
 <% end %>
 <h3>Comments</h3>
 <%= render :partial => 'comment', :collection => @post.comments %>
+<% if logged_in? %>
 <hr>
 <b>Post a Comment</b>
 <%= form_for(@comment) do |f| %>
@@ -55,4 +56,4 @@
       <%= f.submit "Post Comment" %>
     </div>
 <% end %>
-
+<% end %>
