--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,7 +19,7 @@
         <%= f.text_field :name, :size => 40 %>
       </div>
       <% if (session[:user_id]) %>
-      <% if User.find((session[:user_id])).admin %>
+      <% if current_user.admin %>
           <div>
             <%= f.label :admin, 'Admin Privileges' %>:
             <%= f.check_box :admin %>
