Redirection fixes to appropriate paths

--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,5 +1,10 @@
 
-  <div><b><%= comment.username %></b> says: <%= comment.body %> (<%= comment.votes %> votes) </div>
+  <div><b><%= comment.username %></b> says: <%= comment.body %> (<%= comment.votes %> votes)
+    <% if current_user.name == comment.username %>
+        [ <%= link_to "Edit", edit_comment_path(comment) %> |
+        <%= link_to "Delete", comment, method: :delete, data: { confirm: 'Are you sure?' } %> ]
+    <% end %>
+  </div>
   <%#= link_to 'Destroy Comment', comment,
               :confirm => 'Are you sure?',
               :method => :delete %>
