--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,6 +24,7 @@
   <b>Votes:</b>
   <%= @post.votes %>
 </p>
+<!--TODO add an admin check-->
 <% if(current_user == @post.username) %>
     <%= link_to 'Edit', edit_post_path(@post) %> |
     <%= link_to 'Back', posts_path %>
