--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,17 @@
     <div id="navcontainer">
       <ul id="navlist">
         <li><%= link_to 'Home', home_url %></li>
-        <% if !logged_in? %>
-            <li><%= link_to 'Log In', login_url %></li>
-            <li><%= link_to 'Sign Up', new_user_url %></li>
-      <% end %>
-        <li><%= link_to 'Posts', posts_path %></li>
-        <% if session[:user_id] %>
-            <% if logged_in? && User.find((session[:user_id])).admin %>
-            <li><%= link_to 'Users', users_url %></li>
-            <li><%= link_to 'Categories', categories_url %></li>
-            <% end %>
-            <li><%= link_to 'Log Out', logout_path, :method => :delete %></li>
+    <% if !logged_in? %>
+        <li><%= link_to 'Log In', login_url %></li>
+        <li><%= link_to 'Sign Up', new_user_url %></li>
+    <% end %>
+    <% if logged_in? %>
+        <% if User.find((session[:user_id])).admin %>
+        <li><%= link_to 'Users', users_url %></li>
+        <li><%= link_to 'Categories', categories_url %></li>
         <% end %>
+        <li><%= link_to 'Log Out', logout_path, :method => :delete %></li>
+    <% end %>
       </ul>
     </div>
 
