Voting actions for posts and comments

--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,9 +1,11 @@
 
   <div><b><%= comment.username %></b> says: <%= comment.body %> (<%= comment.votes %> votes)
+    [
     <% if current_user.name == comment.username %>
-        [ <%= link_to "Edit", edit_comment_path(comment) %> |
-        <%= link_to "Delete", comment, method: :delete, data: { confirm: 'Are you sure?' } %> ]
+         <%= link_to "Edit", edit_comment_path(comment) %> |
+        <%= link_to "Delete", comment, method: :delete, data: { confirm: 'Are you sure?' } %> |
     <% end %>
+    <%= link_to "Vote", :controller => :comments, :action => :vote %> ]
   </div>
   <%#= link_to 'Destroy Comment', comment,
               :confirm => 'Are you sure?',
