--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,2 +1,24 @@
-<h1>Welcome <%= current_user.name %></h1>
-<p>Congrats, you're an admin!</p>
+<h1>Welcome <%= current_user.name %>!</h1>
+
+<h2> Admin Report </h2>
+
+<p>
+
+<table>
+      <b>All Users</b>
+      <ul>
+        <% @users.each do |user| %>
+            <li><%= user.name %></li>
+        <% end %>
+      </ul>  <br/>
+
+      <b>Total Number of Posts (by all Users) = </b> <%= @post_count %>  <br/><br/>
+      <b>Total Number of Posts (by Admin) = </b> <%= @count_admin_posts %>  <br/><br/>
+      <b>Total Number of Comments = </b> <%= @post_comment_count %>  <br/><br/>
+      <b>Total Number of Votes = </b> <%= @post_vote_count %>    <br/><br/> <br/>
+      <b>Number of comments you've made on posts = </b> <%= @count_admin_comments %>  <br/><br/>
+
+</table>
+
+
+</p>
