--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -14,9 +14,9 @@
 
       <b>Total Number of Posts (by all Users) = </b> <%= @post_count %>  <br/><br/>
       <b>Total Number of Posts (by Admin) = </b> <%= @count_admin_posts %>  <br/><br/>
-      <b>Total Number of Comments = </b> <%= @post_comment_count %>  <br/><br/>
-      <b>Total Number of Votes = </b> <%= @post_vote_count %>    <br/><br/> <br/>
-      <b>Number of comments you've made on posts = </b> <%= @count_admin_comments %>  <br/><br/>
+      <b>Total Number of Comments (by all Users) = </b> <%= @post_comment_count %>  <br/><br/>
+      <b>Total Number of Comments (by Admin) = </b> <%= @count_admin_comments %>  <br/><br/>
+      <b>Total Number of Votes  = </b> <%= @post_vote_count %>    <br/><br/> <br/>
 
 </table>
 
