--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <% end %>
     <% if logged_in? %>
         <% if User.find((session[:user_id])).admin %>
+        <li><%= link_to 'Reports', admin_url %></li>
         <li><%= link_to 'Users', users_url %></li>
         <li><%= link_to 'Categories', categories_url %></li>
         <% end %>
