--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,7 @@
     [ <%= link_to 'Edit your post', edit_post_path(@post) %> ]
 <% end %>
 <p><%= @post.content %></p>
-<% if @post.votes <= 0 %>
+<% if @post.votes = 0 %>
     No one has voted
 <% else %>
     <% if flash[:voters] %>
