--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,9 +17,10 @@ div
 }
 ul#navlist
 {
-    margin-left: 0;
     padding-left: 0;
     white-space: nowrap;
+    margin: 0 auto;
+    width: 45%;
 }
 
 #navlist li
@@ -51,6 +52,8 @@ table {
     border-width: 1px;
     border-color: #666666;
     border-collapse: collapse;
+    width: 80%;
+    margin: 0 auto;
 }
 
 table th {
