--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -25,7 +25,7 @@
       <b>Posts</b>
       <ul>
         <% @found_posts.each do |post| %>
-            <li><%= post.content %></li>
+            <li><%= post.content %><%= link_to 'Show', post %></li>
         <% end %>
       </ul>    <br/>
 
